# ex_spcs_token

./: README.md  pyproject.toml  setup.py
model_scoring/: EXMODELENDPOINT.ipynb
snowkey/: __init__.py  spcs_get.py  spcs_request.py
snowkey/keypair/: __init__.py  keypair_gen.py  spcs_get.py
snowkey/pat/: __init__.py  pat_gen.py  spcs_get.py
src/: spcs_get.py
src/keypair/: keypair_gen.py  spcs_get.py
src/pat/: pat_gen.py  spcs_get.py
