[project]
name = "snowkey"
authors = [
    {name = "Brian Hess", email = "brian.hess@snowflake.com"}
]
description = "Helper tools for getting access tokens for Snowflake REST APIs"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests > 2.26.0",
    "pyjwt"
]

[project.packages]
include = ["snowkey"]
from = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

